# normalmap

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: GetTagCheck.yml  cmake.yml  cmake_windows.yml
include/: normalmap.h
src/: main.c  normalmap.c
win64/: CMakeLists.txt
win64/include/: mem.h  normalmap.h
win64/src/: main.c  normalmap.c
